<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- untitled strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="multiplication_tables_string">Multiplication Tables</string>
	<string name="start_string">START</string>
	<string name="multiplication_tables_ek1_string">Multiplication Tables</string>
	<string name="contents_ek3_string">contents </string>
	<string name="learning_string">Learning</string>
	<string name="tips_string">Tips</string>
	<string name="mc_quiz_string">MC Quiz</string>
	<string name="multiplication_string">Multiplication</string>
	<string name="multiplication_tables_ek2_string">Multiplication Tables</string>
	<string name="what_is_multiplication_string">What is Multiplication</string>
	<string name="multiplication_is_repeated_addition_string">Multiplication is repeated addition</string>
	<string name="a_x_b___b_________b_string">A x B = B + ... + B</string>
	<string name="a_times_string">A times</string>
	<string name="___15_string">= 15</string>
	<string name="x_3_string">x 3</string>
	<string name="_5_string">5</string>
	<string name="multiplication_tables_ek3_string">Multiplication Tables</string>
	<string name="example_ek3_string">Example</string>
	<string name="one_string">one</string>
	<string name="have_three_string">have three</string>
	<string name="here_have_five_string">Here have five </string>
	<string name="how_many_string">How many </string>
	<string name="are_here__string">are here?</string>
	<string name="multiplication_tables_ek4_string">Multiplication Tables</string>
	<string name="_1_times_string">1 times</string>
	<string name="_9_times_string">9 times</string>
	<string name="_2_times_string">2 times</string>
	<string name="_3_times_string">3 times</string>
	<string name="_4_times_string">4 times</string>
	<string name="_5_times_string">5 times</string>
	<string name="_6_times_string">6 times</string>
	<string name="_7_times_string">7 times</string>
	<string name="_8_times_string">8 times</string>
	<string name="_10_times_string">10 times</string>
	<string name="choose_multiplication_table__string">Choose multiplication table:</string>
	<string name="multiplication_tables_ek5_string">Multiplication Tables</string>
	<string name="_1_x_1___1_1_x_2___2_1_x_3___3_1_x_4___4_1_x_5___5_1_x_6___6_1_x_7___7_1_x_8___8_1_x_9___9_1_x_10___10_string">1 x 1 = 11 x 2 = 21 x 3 = 31 x 4 = 41 x 5 = 51 x 6 = 61 x 7 = 71 x 8 = 81 x 9 = 91 x 10 = 10</string>
	<string name="_1_times_table_string">1 times table</string>
	<string name="multiplication_tables_ek6_string">Multiplication Tables</string>
	<string name="result_ek3_string"><u>Result</u></string>
	<string name="_0_string">0</string>
	<string name="_0_ek1_string">0</string>
	<string name="multiplication_tables_ek7_string">Multiplication Tables</string>
	<string name="_1_x_3___1_x_5___1_x_9___string">1 x 3 =1 x 5 =1 x 9 = </string>
	<string name="try_exercise_string">Try exercise</string>
	<string name="check_string">Check</string>
	<string name="multiplication_tables_ek8_string">Multiplication Tables</string>
	<string name="tips_ek4_string">Tips</string>
	<string name="_2_times_table_string">2 times table</string>
	<string name="_9_times_table_string">9 times table</string>
	<string name="_10_times_table_string">10 times table</string>
	<string name="_1_times_table_ek1_string">1 times table</string>
	<string name="multiplication_tables_ek9_string">Multiplication Tables</string>
	<string name="tips_of_1_times_table_string">Tips of 1 times table</string>
	<string name="_1_x_1___1_1_x_2___2_1_x_3___3_1_x_4___4_1_x_5___5_1_x_6___6_1_x_7___7_1_x_8___8_1_x_9___9_1_x_10___10_ek1_string">1  x  1  =  11  x  2  =  21  x  3  =  31  x  4  =  41  x  5  =  51  x  6  =  61  x  7  =  71  x  8  =  81  x  9  =  91  x 10 = 10</string>
	<string name="multiplication_tables_ek10_string">Multiplication Tables</string>
	<string name="tips_of_2_times_table_string">Tips of 2 times table</string>
	<string name="_2_x_1___1___1_2_x_2___2___2_2_x_3___3___3_2_x_4___4___4_2_x_5___5___5_2_x_6___6___6_2_x_7___7___7_2_x_8___8___8_2_x_9___9___9_2_x_10__10__10_string">2  x  1  =  1  + 12  x  2  =  2  + 22  x  3  =  3  + 32  x  4  =  4  + 42  x  5  =  5  + 52  x  6  =  6  + 62  x  7  =  7  + 72  x  8  =  8  + 82  x  9  =  9  + 92  x 10 =10 +10</string>
	<string name="multiplication_tables_ek11_string">Multiplication Tables</string>
	<string name="tips_of_9_times_table_string">Tips of 9 times table</string>
	<string name="_9_x_1___0_1_9_x_2___1_8_9_x_3___2_7_9_x_4___3_6_9_x_5___4_5_9_x_6___5_4_9_x_7___6_3_9_x_8___7_2_9_x_9___8_1_9_x_10___9_0_string">9  x  1  =  0  19  x  2  =  1  89  x  3  =  2  79  x  4  =  3  69  x  5  =  4  59  x  6  =  5  49  x  7  =  6  39  x  8  =  7  29  x  9  =  8  19  x 10 =  9  0</string>
	<string name="multiplication_tables_ek12_string">Multiplication Tables</string>
	<string name="tips_of_10_times_table_string">Tips of 10 times table</string>
	<string name="_10_x_1___1_0_10_x_2___2_0_10_x_3___3_0_10_x_4___4_0_10_x_5___5_0_10_x_6___6_0_10_x_7___7_0_10_x_8___8_0_10_x_9___9_0_10_x_10__10_0_string">10  x  1  =  1 010  x  2  =  2 010  x  3  =  3 010  x  4  =  4 010  x  5  =  5 010  x  6  =  6 010  x  7  =  7 010  x  8  =  8 010  x  9  =  9 010  x 10 =10 0</string>
	<string name="multiplication_tables_ek13_string">Multiplication Tables</string>
	<string name="mc_quiz__1_10__string">MC Quiz (1/10)</string>
	<string name="_0_ek2_string">0</string>
	<string name="_0_ek3_string">0</string>
	<string name="_5_x_6_____string">5 x 6 = ?</string>
	<string name="_30_string">30</string>
	<string name="_40_string">40</string>
	<string name="_32_string">32</string>
	<string name="_25_string">25</string>
	<string name="multiplication_tables_ek14_string">Multiplication Tables</string>
	<string name="contents_ek4_string">contents </string>
	<string name="learning_ek1_string">Learning</string>
	<string name="tips_ek5_string">Tips</string>
	<string name="mc_quiz_ek4_string">MC Quiz</string>
	<string name="multiplication_ek4_string">Multiplication</string>
	<string name="home_page_string">Home page</string>
	<string name="contents_page_string">Contents page</string>
	<string name="multiplication_ek5_string">Multiplication</string>
	<string name="learning_ek2_string">Learning</string>
	<string name="tips_ek6_string">Tips</string>
	<string name="mc_quiz_ek5_string">MC Quiz</string>
	<string name="table_messages">%3d times table</string>
	<string name="one">%3d x %3d = %3d</string>
	<string name="ex">%3d x %3d = </string>
	<string name="ans">The answer is %3d</string>
</resources>