<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/example" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<RelativeLayout android:id="@+id/page_example_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__example_ek2"
					android:background="@drawable/_bg__example_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="850dp" />

				<ImageView android:id="@+id/rectangle_1_ek3"
					android:src="@drawable/rectangle_1_ek3"
					android:contentDescription="rectangle_1_ek3"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="226dp"
					android:layout_width="411dp"
					android:layout_height="626dp" />

				<ImageView android:id="@+id/rectangle_2_ek3"
					android:src="@drawable/rectangle_2_ek3"
					android:contentDescription="rectangle_2_ek3"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="344dp"
					android:layout_width="411dp"
					android:layout_height="508dp" />

				<View android:id="@+id/rectangle_23_ek1"
					android:background="@drawable/rectangle_23_ek1_shape"
					 android:layout_marginStart="12dp"
					android:layout_marginTop="239dp"
					android:layout_width="388dp"
					android:layout_height="564dp" />

				<TextView android:id="@+id/___15"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="45sp"
					android:textColor="@color/multiplication_is_repeated_addition_color"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="617dp"
					android:layout_width="116dp"
					android:layout_height="84.5dp"
					android:text="@string/___15_string"
					 />

				<TextView android:id="@+id/x_3"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="45sp"
					android:textColor="@color/multiplication_is_repeated_addition_color"
					android:layout_marginLeft="184dp"
					android:layout_marginTop="527dp"
					android:layout_width="93dp"
					android:layout_height="89.5dp"
					android:text="@string/x_3_string"
					 />

				<TextView android:id="@+id/_5"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="45sp"
					android:textColor="@color/multiplication_is_repeated_addition_color"
					android:layout_marginLeft="24dp"
					android:layout_marginTop="527dp"
					android:layout_width="56dp"
					android:layout_height="89.5dp"
					android:text="@string/_5_string"
					 />

				<TextView android:id="@+id/multiplication_tables_ek3"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/multiplication_tables_color"
					android:layout_marginLeft="-3dp"
					android:layout_marginTop="85dp"
					android:layout_width="152dp"
					android:layout_height="29.5dp"
					android:text="@string/multiplication_tables_ek3_string"
					 />


				<RelativeLayout android:id="@+id/group_ek5"
					android:layout_marginTop="17.56dp"
					android:layout_marginStart="27dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek9"
						android:src="@drawable/vector_ek9"
						android:contentDescription="vector_ek9"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="56dp"
						android:layout_height="57.84dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/menu_black_24dp_1_ek2"
					android:layout_marginTop="15dp"
					android:layout_marginStart="326dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek10"
						android:src="@drawable/vector_ek10"
						android:contentDescription="vector_ek10"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="60dp"
						android:layout_height="60dp" />

					<ImageButton android:id="@+id/imageButton1"
						android:src="@drawable/vector_ek11"
						android:contentDescription="vector_ek11"
						 android:layout_marginStart="7.5dp"
						android:layout_marginTop="15dp"
						android:layout_width="45dp"
						android:layout_height="30dp" />

				</RelativeLayout>

				<TextView android:id="@+id/example_ek3"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="50sp"
					android:textColor="@color/contents_ek3_color"
					android:layout_marginLeft="102dp"
					android:layout_marginTop="131dp"
					android:layout_width="222dp"
					android:layout_height="94dp"
					android:text="@string/example_ek3_string"
					 />

				<TextView android:id="@+id/one"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="35sp"
					android:textColor="@color/multiplication_is_repeated_addition_color"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="324dp"
					android:layout_width="82dp"
					android:layout_height="65.5dp"
					android:text="@string/one_string"
					 />

				<ImageView
					android:id="@+id/image_1"
					android:layout_width="73dp"
					android:layout_height="49dp"
					android:layout_marginStart="91dp"
					android:layout_marginTop="335dp"
					android:contentDescription="image_1"
					android:src="@drawable/image_1" />

				<TextView
					android:id="@+id/have_three"
					android:layout_width="172dp"
					android:layout_height="63dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="163dp"
					android:layout_marginTop="324dp"
					android:gravity="center"
					android:text="@string/have_three_string"
					android:textColor="@color/multiplication_is_repeated_addition_color"
					android:textSize="35sp" />

				<ImageView
					android:id="@+id/image_2"
					android:layout_width="46dp"
					android:layout_height="46dp"
					android:layout_marginStart="332dp"
					android:layout_marginTop="335dp"
					android:contentDescription="image_2"
					android:src="@drawable/image_2" />

				<ImageView
					android:id="@+id/image_6"
					android:layout_width="64dp"
					android:layout_height="65dp"
					android:layout_marginStart="275dp"
					android:layout_marginTop="530dp"
					android:contentDescription="image_6"
					android:src="@drawable/image_6" />

				<ImageView
					android:id="@+id/image_7"
					android:layout_width="64dp"
					android:layout_height="65dp"
					android:layout_marginStart="132dp"
					android:layout_marginTop="630dp"
					android:contentDescription="image_7"
					android:src="@drawable/image_7" />

				<TextView android:id="@+id/here_have_five"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="35sp"
					android:textColor="@color/multiplication_is_repeated_addition_color"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="264dp"
					android:layout_width="246dp"
					android:layout_height="65.5dp"
					android:text="@string/here_have_five_string"
					 />

				<ImageView
					android:id="@+id/image_3"
					android:layout_width="73dp"
					android:layout_height="49dp"
					android:layout_marginStart="256dp"
					android:layout_marginTop="265dp"
					android:contentDescription="image_3"
					android:src="@drawable/image_3" />

				<ImageView
					android:id="@+id/image_5"
					android:layout_width="101dp"
					android:layout_height="69dp"
					android:layout_marginStart="78dp"
					android:layout_marginTop="530dp"
					android:contentDescription="image_5"
					android:src="@drawable/image_5" />

				<TextView android:id="@+id/how_many"
					android:textSize="35sp"
					android:textColor="@color/multiplication_is_repeated_addition_color"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="398dp"
					android:layout_width="189dp"
					android:layout_height="65.5dp"
					android:text="@string/how_many_string"
					 />

				<ImageView
					android:id="@+id/image_4"
					android:layout_width="46dp"
					android:layout_height="46dp"
					android:layout_marginStart="194dp"
					android:layout_marginTop="400dp"
					android:contentDescription="image_4"
					android:src="@drawable/image_4" />

				<TextView android:id="@+id/are_here_"
					android:textSize="35sp"
					android:textColor="@color/multiplication_is_repeated_addition_color"
					android:layout_marginLeft="241dp"
					android:layout_marginTop="398dp"
					android:layout_width="168dp"
					android:layout_height="65.5dp"
					android:text="@string/are_here__string"
					 />

				<ImageButton android:id="@+id/imageButton2"
					android:background="@drawable/rectangle_31_ek1_shape"
					android:src="@drawable/vector_ek13"
					 android:layout_marginStart="31dp"
					android:layout_marginTop="721dp"
					android:layout_width="74dp"
					android:layout_height="74dp" />


				<RelativeLayout android:id="@+id/arrow_back_ios_black_24dp_1"
					android:layout_marginTop="725dp"
					android:layout_marginStart="48dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					/>

			</RelativeLayout>

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>